# fraud-detection-system

./: .checkov.yaml  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  AGENTS.md  Dockerfile  LICENSE  Makefile  PROJECT_CHARTER.md  README.md  aws-svg-icons-3.0.0-2021-07-30.tgz  gitleaks.toml  handoff_lawbook.md  makefile  pyproject.toml  pytest.ini  reqs.txt  temp_patch.diff
.aivory/: docker-positions.json
artefacts/: README.md
config/: AGENTS.md  README.md  engine_countries.yaml  policy.s6.selection.yaml  transaction_schema.json  transaction_schema.yaml
contracts/: AGENTS.md  README.md  _mirror_manifest.json  artefact_registry_3B.yaml
docs/: README.md  retro.md  sprint-review.md
examples/: README.md
flows/: generate_upload_flow.py
great_expectations/: great_expectations.yml
lambda/: index.py
licenses/: Proprietary-Internal.txt  Public-Domain.txt  SEE-FILES.txt  license_map.yaml
orchestration/: README.md
project_config/: generator_config.yaml
requirements/: ig-lambda.requirements.txt  m1-image.in  m1-image.lock.txt
runs/: AGENTS.md  README.md
schema/: transaction_schema.avsc  transaction_schema.json
scripts/: AGENTS.md  README.md  build_ccy_country_shares.py  build_cdn_country_weights_3b.py  build_cdn_key_digest_3b.py  build_cdn_weights_ext_yaml.py  build_country_zone_alphas_3a.py  build_crossborder_features_1a.py  build_currency_reference_surfaces.py  build_demand_scale_policy_5a.py  build_gdp_bucket_map.py  build_hrsl_raster_3b.py  build_hurdle_exports.py  build_iso_canonical.py  build_mcc_channel_rules_3b.py  build_merchant_class_policy_5a.py  build_paths_tree.py  build_pelias_cached_sqlite_3b.py  build_population_raster.py  build_portfolio_appendix_b_data_panels.py  build_portfolio_cost_appendix_panels.py  build_scenario_calendar_5a.py  build_settlement_shares.py  build_shape_library_5a.py  build_transaction_schema_merchant_ids.py  build_tz_world.py  build_virtual_edge_policy_v1.py  build_virtual_settlement_coords_3b.py  build_virtual_validation_3b.py  build_world_bank_gdp_pc.py  build_world_bank_gdp_pc_2024.py  build_world_countries.py  build_zone_floor_policy_3a.py  bump_schema_version.py  check_share_vs_geo.py  compute_tile_population_weights.py  ge_bootstrap.py  ge_validate.py  gen_dummy_parquet.py  gen_empty_parquet.py  (+11 more)
services/: AGENTS.md  README.md
shared/: AGENTS.md  README.md
sprints/: Sprint-01.md  Sprint-02.md  backlog_issues.md
temp/: check_geo.py  inspect_reference.py  peek_tz.py  scratch.md
tests/: README.md  __init__.py  test_placeholder.py
tmp/: dummy.parquet  empty.parquet
tools/: analyze_segment2b_p1_reopen_floor.py  analyze_segment2b_p2_knob_sensitivity.py  analyze_segment5b_p2_sensitivity.py  analyze_segment5b_p2u2_owner_forensics.py  build_contracts_pack.py  emit_segment5b_p2_contract_lock.py  interface_pack_integrity_check.py  preflight_seg1a_contracts.py  prune_failed_runs.py  prune_run_folders_keep_set.py  render_segment3a_p1_policies.py  render_segment3a_p2_policy.py  render_segment3a_p4_policy.py  run_segment5b_p2_policy_sweep.py  score_segment1a_freeze_guard.py  score_segment1a_p1_4_lock.py  score_segment1a_p2_1_baseline.py  score_segment1a_p3_1_baseline.py  score_segment1a_p5_certification.py  score_segment1b_p0_baseline.py  score_segment1b_p1_candidate.py  score_segment1b_p2_candidate.py  score_segment1b_p3_candidate.py  (+65 more)
(+4686 files in other folders)
