[project]
name = "fraud-detection-system"
version = "0.1.0"
description = "Portfolio fraud detection project"
authors = [
    {name = "Esosa Orumwese"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
# Tell Poetry: “Look for packages under src/”
packages = [
  { include = "fraud_detection", from = "src" }
]
dependencies = [
    "requests (>=2.32.3,<3.0.0)",       # add using `poetry add <package-name>`
    "pyarrow (>=20.0.0,<21.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "mimesis (>=18.0.0,<19.0.0)",
    "faker (>=37.3.0,<38.0.0)",
    "ydata-profiling (>=4.16.1,<5.0.0)",
    "polars (>=1.30.0,<2.0.0)",
    "boto3 (==1.35.49)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]    # add using `poetry add --dev <package-name>`
pytest = "^8.3.5"
detect-secrets = "^1.5.0"
pre-commit = "^4.2.0"
black = "^25.1.0"
ruff = "^0.11.9"
mypy = "^1.15.0"
coverage = "^7.8.0"
pytest-cov = "^6.1.1"
checkov = "^3.2.427"
pyyaml = "^6.0.2"
yamllint = "^1.37.1"
great-expectations = "^1.4.5"
pandas = ">=1.3,<2.2"

